fix some overflow problem

--- a/CSS/max599px.css
+++ b/CSS/max599px.css
@@ -6,7 +6,9 @@
   }
   .container {
     width: 95%;
-    overflow: hidden;
+    content: "";
+    clear: both;
+    display: table;
   }
   div.titleDiv {
     width: 80%;
