--- a/CSS/min992-max1200.css
+++ b/CSS/min992-max1200.css
@@ -6,7 +6,9 @@
   }
   .container {
     width: 95%;
-    overflow: hidden;
+    content: "";
+    clear: both;
+    display: table;
   }
   div.titleDiv {
     width: 80%;
@@ -199,7 +201,9 @@
   .statisticsContainer {
     width: 90%;
     margin: 0 auto;
-    overflow: hidden;
+    content: "";
+    clear: both;
+    display: table;
     padding: 10px;
   }
   .statisticsBox {
