--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -21,7 +21,9 @@ html {
 .container {
   width: 1200px;
   margin: 0 auto;
-  overflow: hidden;
+  content: "";
+  clear: both;
+  display: table;
 }
 
 section {
